2006-10-19 Sandro Santilli <strk@refractions.net>

        * configure.in: use 'expr' for arithmetics (more portable)

2006-10-18 Mateusz Loskot <mateusz@loskot.net>

	* makefile.vc: added top-level makefile for Visual C++,
	* source/Makefile.vc: updated comments

2006-10-18 Sandro Santilli <strk@refractions.net>

	* source/operation/overlay/OverlayOp.cpp: disable non-JTS overlay
	  result validators (to more closely track JTS at this stage)

2006-10-13 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geom/BinaryOp.h (SnapOp): fixed horrible
	  bug applying overlay of first geom to itself :(
	* capi/Makefile.am: don't directly link geostest against
	  both libgeos.so and libstdc++ (should be derived by
	  libgeos_c.so).

2006-10-12 Sandro Santilli <strk@refractions.net>

	* tests/bigtest/GeometryTestFactory.cpp,
	  tests/bigtest/bigtest.h, tests/bigtest/TestSweepLineSpeed.cpp:
	  fixed header inclusion, to reduce compiler noise.

2006-10-09 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geom/BinaryOp.h: always snap geoms to
	  each-other before applying an overlay (temp hack).
	* source/operation/overlay/OverlayOp.cpp: enable all overlay 
	  result validators, make it disablable at compile time.

2006-10-05 Mateusz Loskot <mateusz@loskot.net>

	* capi/geos_c.h.in, 
	  capi/geos_c.h.vc: Added inclusion guards. 

2006-10-05 Sandro Santilli <strk@refractions.net>

	* tests/xmltester/XMLTester.cpp: increment areatest verbosity
	  (needs -v -v)

2006-09-07 Howard Butler <hobu@hobu.net>

	* GEOSEnvelope wasn't in the PROTOTYPES section in geos_c.cpp

2006-09-07 Sandro Santilli <strk@refractions.net>

	* source/operation/distance/DistanceOp.cpp (computeMinDistancePoints):
	  fixed invalid reference.
	* autogen.sh: don't giveup on automake failures (testing)

2006-09-06 Sandro Santilli <strk@refractions.net>

	* tests/unit/operation/overlay/OffsetPointGeneratorTest.cpp
	  tests/unit/Makefile.am: new test for OffsetPointGenerator class